# chuggernaut

./: .gitignore  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.runner-env  Dockerfile.runner-env.flutter  Dockerfile.runner-env.rust  JOURNAL.md  README.md  docker-compose.yml  nats-server.conf
.claude/: settings.json
.claude/skills/chug/: SKILL.md
.github/workflows/: ci.yml
action/: review.yml  work.yml
action/chug/: action.yml
action/mock-claude/: mock-claude.sh  mock-review.sh
crates/channel/: Cargo.toml
crates/channel/src/: lib.rs  main.rs  mcp.rs
crates/channel/tests/: integration.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/dispatcher/: Cargo.toml
crates/dispatcher/src/: action_dispatch.rs  assignment.rs  claims.rs  config.rs  deps.rs  error.rs  handlers.rs  http.rs  issue_sync.rs  jobs.rs  lib.rs  main.rs  monitor.rs  nats_client.rs  nats_init.rs  provider.rs  recovery.rs  state.rs  workers.rs
crates/dispatcher/tests/: admin.rs  dispatch.rs  e2e.rs  http_api.rs  integration.rs  jobs.rs  monitor.rs  recovery.rs  review.rs  worker_outcomes.rs
crates/dispatcher/tests/common/: mod.rs
crates/forgejo-api/: Cargo.toml
crates/forgejo-api/src/: lib.rs  types.rs
crates/git-provider/: Cargo.toml
crates/git-provider/src/: lib.rs  types.rs
crates/github-api/: Cargo.toml
crates/github-api/src/: lib.rs  types.rs
crates/nats/: Cargo.toml
crates/nats/src/: lib.rs
crates/reviewer/: Cargo.toml
crates/reviewer/src/: config.rs  decision.rs  dispatcher_client.rs  error.rs  forgejo_retry.rs  lib.rs  main.rs  merge.rs  nats_setup.rs  review.rs  state.rs  trigger.rs
crates/reviewer/tests/: integration.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/prompts/: review.md  rework.md  work.md
crates/worker/src/: config.rs  git.rs  lib.rs  lifecycle.rs  main.rs  sim.rs
docs/: dispatcher.md  monitor.md  nats-schema.md  reviewer.md  testing.md  worker-protocol.md
fixtures/: frontend-wasm.json  sample.json
fixtures/bauhaus-pomodoro/: CLAUDE.md  README.md  jobs.json
fixtures/studybuddy/: CLAUDE.md  README.md  jobs.json
infra/runner/: config.yaml  entrypoint.sh
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/terraform/modules/forgejo-repo/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/forgejo-runner/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/forgejo-user/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/github-repo/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/github-runner/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/nats/: main.tf  outputs.tf  variables.tf
scripts/: add-runner.sh  coverage.sh  dev-down.sh  dev-up.sh  github-setup.sh  init.sh
static/: index.html
v2/: design.md  spec.md  spec_original.md
