[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/forgejo-api",
    "crates/dispatcher",
    "crates/worker",
    "crates/cli",
    "crates/reviewer",
    "crates/channel",
    "crates/nats",
    "crates/test-utils",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
chuggernaut-types = { path = "crates/types" }
chuggernaut-forgejo-api = { path = "crates/forgejo-api" }
chuggernaut-nats = { path = "crates/nats" }
chuggernaut-worker = { path = "crates/worker" }

anyhow = "1"
async-nats = "0.46"
async-stream = "0.3"
bytes = "1"
futures = "0.3"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
petgraph = "0.8"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
