[package]
name = "chuggernaut-channel"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "chuggernaut-channel"
path = "src/main.rs"

[dependencies]
chuggernaut-types.workspace = true

async-nats.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
futures.workspace = true
anyhow.workspace = true
bytes.workspace = true

[dev-dependencies]
chuggernaut-test-utils = { path = "../test-utils" }
testcontainers = "0.27.2"
testcontainers-modules = { version = "0.15.0", features = ["nats"] }
