[package]
name = "forge2-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "forge2"
path = "src/main.rs"

[dependencies]
forge2-types = { workspace = true }
forge2-worker = { workspace = true }
async-nats.workspace = true
clap = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow.workspace = true
bytes.workspace = true
uuid = { workspace = true, features = ["v4"] }
