[package]
name = "chuggernaut-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "chuggernaut"
path = "src/main.rs"

[dependencies]
chuggernaut-types = { workspace = true }
chuggernaut-worker = { workspace = true }
chuggernaut-nats = { workspace = true }
async-nats.workspace = true
clap = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow.workspace = true
bytes.workspace = true
uuid = { workspace = true, features = ["v4"] }
futures.workspace = true
