[package]
name = "chuggernaut-github-api"
version.workspace = true
edition.workspace = true

[dependencies]
chuggernaut-git-provider = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
