[package]
name = "chuggernaut-reviewer"
version.workspace = true
edition.workspace = true

[[bin]]
name = "chuggernaut-reviewer"
path = "src/main.rs"

[dependencies]
chuggernaut-types = { workspace = true }
chuggernaut-forgejo-api = { workspace = true }
chuggernaut-nats = { workspace = true }
anyhow = { workspace = true }
async-nats = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
chuggernaut-dispatcher = { path = "../dispatcher" }
testcontainers = { version = "0.27.2", features = ["http_wait_plain"] }
testcontainers-modules = { version = "0.15.0", features = ["nats"] }
tokio-test = "0.4.5"
uuid = { workspace = true }
reqwest = { workspace = true }
