[package]
name = "chuggernaut-worker"
version.workspace = true
edition.workspace = true

[dependencies]
chuggernaut-types = { workspace = true }
chuggernaut-forgejo-api = { workspace = true }
chuggernaut-nats = { workspace = true }
async-nats = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes.workspace = true
futures.workspace = true
anyhow.workspace = true
async-trait = "0.1.89"
tokio-util = "0.7.18"
