[package]
name = "chuggernaut-worker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "chuggernaut-worker"
path = "src/main.rs"

[dependencies]
chuggernaut-types = { workspace = true }
chuggernaut-git-provider = { workspace = true }
chuggernaut-forgejo-api = { workspace = true }
chuggernaut-github-api = { workspace = true }
chuggernaut-nats = { workspace = true }
chuggernaut-channel = { path = "../channel" }
async-nats = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow.workspace = true
futures.workspace = true
tokio-util = "0.7.18"
uuid = { workspace = true }
